<resources>
    <string name="app_name">Alarm Clock</string>
    <string name="set_an_alarm">Set an alarm</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="did_you_set_an_alarm">Did you set an alarm?</string>
    <string name="turn_off_alarm">Turn Off Alarm</string>
    <string name="update_text_1"> </string>
    <string name="update_text_2">Alarm Off</string>
    <string name="stop_being_lazy_and_wake_up">STOP BEING LAZY AND WAKE UP!!</string>
    <string name="this_should_wake_you_up">THIS SHOULD WAKE YOU UP!!</string>
    <string name="what_is_the_capital_city_of_mali">What is the capital city of Mali??</string>
    <string name="what_is_the_capital_city_of_afghanistan">What is the capital city of Afghanistan??</string>
    <string name="check_answers">Check Answers</string>
    <string-array name="audios">
        <item> Pick an audio </item>
        <item> One </item>
        <item> Two </item>
        <item> Three </item>
        <item> Four </item>
        <item> Five </item>
    </string-array>
    <string-array name="answersOne">
        <item> Bamako </item>
        <item> Ouagadougou </item>
    </string-array>

    <string-array name="answersTwo">
        <item> Jalalabad </item>
        <item> Kabul </item>
        <item> Kandahar </item>
    </string-array>
</resources>
