<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlarmOff"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="#26C6DA">

    <TextView
        android:id="@+id/text_view_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_being_lazy_and_wake_up"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"/>

    <TextView
        android:id="@+id/text_view_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_1"
        android:text="@string/this_should_wake_you_up"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"/>

    <TextView
        android:id="@+id/question_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_2"
        android:text="@string/what_is_the_capital_city_of_mali"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"/>

    <Spinner
        android:id="@+id/answer_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/question_1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        />

    <TextView
        android:id="@+id/question_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/answer_1"
        android:text="@string/what_is_the_capital_city_of_afghanistan"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"/>

    <Spinner
        android:id="@+id/answer_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/question_2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"/>
    <Button
        android:id="@+id/check_answers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_answers"
        android:layout_below="@id/answer_2"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:onClick="checkAnswers"
        android:backgroundTint="#f74848"/>
</RelativeLayout>