<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".MainActivity">

    <TimePicker
        android:id="@+id/time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/update_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/time_picker"
        android:text="@string/did_you_set_an_alarm"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/set_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/update_text"
        android:layout_alignParentStart="true"
        android:text="@string/set_alarm"
        android:layout_marginBottom="4dp"
        android:onClick="setAlarm"/>

    <Button
        android:id="@+id/turn_off_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/update_text"
        android:layout_alignParentEnd="true"
        android:layout_alignEnd="@id/set_alarm"
        android:text="@string/turn_off_alarm"
        android:layout_marginBottom="8dp"
        android:onClick="turnOffAlarm"/>

    <Spinner
        android:id="@+id/audio_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/set_alarm"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
